Video de pagina principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-{{instrucciones[data2]}}
+<video autoplay muted loop id="myVideo">
+  <source src="assets/vid.mp4" type="video/mp4">
+</video>
+
+<p>Hola</p>
