--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,21 @@
+<div class="container">
+
+</div>
+
 <video autoplay muted loop id="myVideo">
   <source src="assets/vid.mp4" type="video/mp4">
 </video>
 
-<p>Hola</p>
+<div class="outer">
+  <div class="middle">
+    <div class="inner">
+      <h1 class="center white title font">OPRIME EL BOTÓN ROJO</h1>
+      <h3 class="center white font">Progreso</h3>
+      <div class="col-12">
+        <div class="progress ml-5 mr-5">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" [ngClass]="{'bg-success': progress >= 65}" role="progressbar" aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width':getProgress()}"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
