En espera de implementación de segunda y tercera máquina

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
 <div class="outer">
   <div class="middle">
     <div class="inner">
-      <h1 class="center white title font">OPRIME EL BOTÓN ROJO</h1>
+      <h2 class="white title font center mb-5">{{countDown | async}}</h2>
+      <h1 class="center white title font mb-5">{{instrucciones[instruccion]}}</h1>
       <h3 class="center white font">Progreso</h3>
       <div class="col-12">
         <div class="progress ml-5 mr-5">
