Implementación de start up finalizada desde back-end

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -57,7 +57,17 @@
     font-size: 4em;
 }
 
+.timer{
+    font-size: 6em;
+}
+
 .font{
     font-family: 'Share Tech Mono', monospace;
 }
+
+#yourElement {
+    -web-kit-animation-duration: 1s;
+    -web-kit-animation-delay: 1s;
+    -web-kit-animation-iteration-count: infinite;
+  }
 
